--- a/sources/model_definition.yaml
+++ b/sources/model_definition.yaml
@@ -12,4 +12,5 @@
       { name: test_result, type: category },
     ],
   output_features: [{ name: test_result, type: category }],
+  training: {epochs: 10}
 }
